# legal-ai-skills

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
bluebook-review/agents/: openai.yaml
bluebook-review/references/: attribution.md
bluebook-review/scripts/: inspect_docx_citations.py
inject-word-cross-references/: SKILL.md  requirements.txt
inject-word-cross-references/references/: plan-schema.md  workflow-and-testing.md
inject-word-cross-references/scripts/: build_ground_truth.py  docx_xref_cli.py  semantic_dump.py
inject-word-cross-references/scripts/docx_xref/: bookmarks.py  differential.py  models.py  namespaces.py  package.py  serializer.py
lawreview-research/scripts/: evaluate_search.py  lawcorpus.py  lawcorpus_mcp.py
legal-bibliography/agents/: openai.yaml
scripts/: validate_skills.py
skills/bluebook-review/: SKILL.md
skills/bluebook-review/scripts/: fetch_epps_bluebook.py
skills/inject-word-cross-references/agents/: openai.yaml
skills/inject-word-cross-references/references/: word-ooxml.md
skills/inject-word-cross-references/scripts/: harvest_donors.py  probe_update_semantics.py  release_gate.py
skills/lawreview-research/: SKILL.md
skills/lawreview-research/agents/: openai.yaml
skills/lawreview-research/references/: schema.md
skills/legal-bibliography/: SKILL.md
skills/legal-bibliography/references/: api.md
skills/legal-bibliography/scripts/: bbgpt_client.py
tests/: test_bbgpt_client.py  test_bluebook_review.py  test_docx_xref.py  test_lawcorpus.py
(+14 files in other folders)
