[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-ai-skills"
version = "0.1.0"
description = "Agent skills and deterministic tools for legal scholarship workflows"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = ["lxml>=5"]

[project.optional-dependencies]
word = ["pywin32>=306; platform_system == 'Windows'"]

[tool.setuptools]
py-modules = []
